[package]
name = "wiki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = "0.4.40"
run_script = "0.10.1"

[package.metadata.scripts]
mdbook-build = "~/.cargo/bin/mdbook build"
mdbook-clean = "~/.cargo/bin/mdbook clean"
mdbook-serve = "~/.cargo/bin/mdbook serve"
mdbook-watch = "~/.cargo/bin/mdbook watch"

